Gap fix attempt #9

--- a/public/css/index-styles.css
+++ b/public/css/index-styles.css
@@ -1402,7 +1402,7 @@
     margin-bottom: -2px !important;
   }
   .wave-light-bg {
-    margin-bottom: -2px !important;
+    margin-bottom: -3px !important;
   }
   .content-container {
     margin-bottom: -2px !important;
@@ -1600,7 +1600,7 @@
     margin-bottom: -2px !important;
   }
   .wave-light-bg {
-    margin-bottom: -2px !important;
+    margin-bottom: -3px !important;
   }
   .content-container {
     margin-bottom: -2px !important;
